--- a/tpl/index.html
+++ b/tpl/index.html
@@ -1,4 +1,4 @@
-$def with (nodes, posts, title)
+$def with (cat_nodes, posts, title)
 $var title: $title
 <div class="nodes">
 	$for node in nodes:
@@ -10,4 +10,14 @@ $for post in posts:
 		<h2 class="post_title"><a href="/post/view/$post.id">$post.title</a></h2>
 		<div class="post_content">$post.content</div>
 	</div>
+</div>
+<div class="nodes">
+	<ul>
+		$for cat_name, nodes in cat_nodes.items():
+			<li>$catname
+				<ul>$for node in nodes:
+					<li>$node.name</li>
+				</ul>
+			</li>
+	</ul>
 </div>
