--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -1,12 +1,23 @@
-$def with (content)
+$def with (content, title = 'test')
+$if content.title is not None:
+	$ title = content.title + ' | ' + site_title
+$else:
+	$ title = site_title
 <html>
 	<head> 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<link rel="stylesheet" href="/static/css/main.css" />
-		<title>$content.title</title>
+		<title>$title</title>
 	</head>
 	<body>
 $:content
+	<div id="slider_bar">
+		$session.session_id
+		$if session.user_id:
+			<a href="#">你好！</a>
+		$else:
+			<a href="#">请登录</a>
+	</div>
 		<div id="page_footer">
 			<p>Post Bar coding by web.py</p>
 		</div>
