--- a/tpl/create_post.html
+++ b/tpl/create_post.html
@@ -2,5 +2,5 @@ $def with (form, title)
 $var title: $title
 <h2>创建新主题</h2>
 <form action="" method="post">
-	$:form.render()
+	$:form.render_css()
 </form>
