--- a/tpl/post_view.html
+++ b/tpl/post_view.html
@@ -11,7 +11,7 @@ $var title: $post.title
 	</div>
 	<div id="add_comment">
 		<form action="/comment/$post.id" method="post">
-			$:form.render()
+			$:form.render_css()
 		</form>
 	</div>
 </div>
