--- a/tpl/signup.html
+++ b/tpl/signup.html
@@ -2,6 +2,6 @@ $def with (form, title)
 $var title : $title
 <div id="signup">
 	<form action="" method="post">
-		$:form.render()
+		$:form.render_css()
 	</form>
 </div>
