--- a/tpl/index.html
+++ b/tpl/index.html
@@ -19,6 +19,7 @@ $var title : $title
 	</div>
 $for post in posts:
 	$ user = post['user'][0]
+	$ node = post['node'][0]
 	<div class="cell item" style="border-top-left-radius: 3px; border-top-right-radius: 3px;">
 	    <table cellpadding="0" cellspacing="0" border="0" width="100%">
 	        <tbody>
@@ -27,7 +28,7 @@ $for post in posts:
 		            <td width="10"></td>
 		            <td width="auto" valign="middle"><span class="item_title"><a href="/post/$post['post'].id">$post['post'].title</a></span>
 		            <div class="sep5"></div>
-		            <span class="small fade"><a class="node" href="http://www.v2ex.com/go/share">分享发现</a> &nbsp;•&nbsp; <strong><a href="http://www.v2ex.com/member/hzlzh">$user.name</a></strong> &nbsp;•&nbsp; $post['post'].time &nbsp;•&nbsp; 最后回复来自 <strong><a href="http://www.v2ex.com/member/hzlzh">hzlzh</a></strong></span>
+		            <span class="small fade"><a class="node" href="/node/$node.name">$node.display_name</a> &nbsp;•&nbsp; <strong><a href="http://www.v2ex.com/member/hzlzh">$user.name</a></strong> &nbsp;•&nbsp; $post['post'].time &nbsp;•&nbsp; 最后回复来自 <strong><a href="http://www.v2ex.com/member/hzlzh">hzlzh</a></strong></span>
 		            </td>
 		            <td width="50" align="right" valign="middle">
 		                <a href="http://www.v2ex.com/t/46790#reply14" class="count_livid">14</a>
