--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -17,7 +17,7 @@ $else:
 	            <div style="padding-top: 6px;">
 	            <table cellpadding="0" cellspacing="0" border="0" width="100%">
 	                <tbody><tr>
-	                    <td width="120" align="left"><a href="./V2EX_files/V2EX.htm" name="top"><img src="/static/img/logo@2x.png" border="0" align="default" alt="V2EX" width="94" height="30"></a></td>
+	                    <td width="120" align="left"><a href="/" name="top"><img src="/static/img/logo@2x.png" border="0" align="default" alt="V2EX" width="94" height="30"></a></td>
 	                    <td width="auto" align="left">
 	                        <script type="text/javascript">
 	                            var dispatch = function() {
