--- a/tpl/index.html
+++ b/tpl/index.html
@@ -1,4 +1,4 @@
-$def with (cat_nodes, posts, title = None)
+$def with (cats, posts, title = None)
 $var title : $title
 <div id="Main">
 <div class="sep20"></div>
@@ -17,18 +17,20 @@ $var title : $title
 		<a href="http://www.v2ex.com/?tab=nodes" class="tab">节点收藏</a>
 		<a href="http://www.v2ex.com/?tab=members" class="tab">关注</a>
 	</div>
-$for post in posts:
-	$ user = post['user'][0]
-	$ node = post['node'][0]
+$for post_cur in posts:
+	$ post = post_cur['post']
+	$ user = post_cur['user']
+	$ node = post_cur['node']
+	$ comment_user = post_cur['comment_user']
 	<div class="cell item" style="border-top-left-radius: 3px; border-top-right-radius: 3px;">
 	    <table cellpadding="0" cellspacing="0" border="0" width="100%">
 	        <tbody>
 		        <tr>
 		            <td width="48" valign="top" align="center"><a href="http://www.v2ex.com/member/hzlzh"><img src="./V2EX_files/6746_normal.png" class="avatar" border="0" align="default" auto=""></a></td>
 		            <td width="10"></td>
-		            <td width="auto" valign="middle"><span class="item_title"><a href="/post/$post['post'].id">$post['post'].title</a></span>
+		            <td width="auto" valign="middle"><span class="item_title"><a href="/post/$post.id">$post.title</a></span>
 		            <div class="sep5"></div>
-		            <span class="small fade"><a class="node" href="/node/$node.name">$node.display_name</a> &nbsp;•&nbsp; <strong><a href="http://www.v2ex.com/member/hzlzh">$user.name</a></strong> &nbsp;•&nbsp; $post['post'].time &nbsp;•&nbsp; 最后回复来自 <strong><a href="http://www.v2ex.com/member/hzlzh">hzlzh</a></strong></span>
+		            <span class="small fade"><a class="node" href="/node/$node.name">$node.display_name</a> &nbsp;•&nbsp; <strong><a href="http://www.v2ex.com/member/hzlzh">$user.name</a></strong> &nbsp;•&nbsp; $post.time &nbsp;•&nbsp; 最后回复来自 <strong><a href="http://www.v2ex.com/member/hzlzh">hzlzh</a></strong></span>
 		            </td>
 		            <td width="50" align="right" valign="middle">
 		                <a href="http://www.v2ex.com/t/46790#reply14" class="count_livid">14</a>
@@ -41,21 +43,23 @@ $for post in posts:
 <div class="sep20"></div>
 <div class="box">
     <div class="cell"><div class="fr"><a href="/planes">浏览全部节点</a></div><span class="fade"><strong>V2EX</strong> / 节点导航</span></div>
-	$for cat_name, nodes in cat_nodes.items():    
-	    <div class="cell">
-	    	<table cellpadding="0" cellspacing="0" border="0">
-	    		<tbody>
-	    			<tr>
-	    				<td align="right" width="60">
-	    					<span class="fade">$cat_name</span>
-	    				</td>
-	    				<td style="line-height: 200%; padding-left: 10px;">
-	    					$for node in nodes:
-	    						<a href="/node/$node.name" style="font-size: 14px;">$node.display_name</a>&nbsp; &nbsp; 
-	    				</td>
-	    			</tr>
-	   			</tbody>
-	   		</table>
-	   	</div>
+$for cat_cur in cats:
+	$ cat = cat_cur['cat']
+	$ nodes = cat_cur['node']
+    <div class="cell">
+    	<table cellpadding="0" cellspacing="0" border="0">
+    		<tbody>
+    			<tr>
+    				<td align="right" width="60">
+    					<span class="fade">$cat.name</span>
+    				</td>
+    				<td style="line-height: 200%; padding-left: 10px;">
+    					$for node in nodes:
+    						<a href="/node/$node.name" style="font-size: 14px;">$node.display_name</a>&nbsp; &nbsp; 
+    				</td>
+    			</tr>
+   			</tbody>
+   		</table>
+   	</div>
 </div>
 </div>
