--- a/tpl/index.html
+++ b/tpl/index.html
@@ -22,6 +22,7 @@ $for post_cur in posts:
 	$ user = post_cur['user']
 	$ node = post_cur['node']
 	$ comment_user = post_cur['comment_user']
+	$:comment_user
 	<div class="cell item" style="border-top-left-radius: 3px; border-top-right-radius: 3px;">
 	    <table cellpadding="0" cellspacing="0" border="0" width="100%">
 	        <tbody>
@@ -30,7 +31,9 @@ $for post_cur in posts:
 		            <td width="10"></td>
 		            <td width="auto" valign="middle"><span class="item_title"><a href="/post/$post.id">$post.title</a></span>
 		            <div class="sep5"></div>
-		            <span class="small fade"><a class="node" href="/node/$node.name">$node.display_name</a> &nbsp;•&nbsp; <strong><a href="http://www.v2ex.com/member/hzlzh">$user.name</a></strong> &nbsp;•&nbsp; $post.time &nbsp;•&nbsp; 最后回复来自 <strong><a href="http://www.v2ex.com/member/hzlzh">hzlzh</a></strong></span>
+		            <span class="small fade"><a class="node" href="/node/$node.name">$node.display_name</a> &nbsp;•&nbsp; <strong><a href="http://www.v2ex.com/member/hzlzh">$user.name</a></strong>
+					$if comment_user is not None:
+						&nbsp;•&nbsp; $post.time &nbsp;•&nbsp; 最后回复来自 <strong><a href="http://www.v2ex.com/member/hzlzh">$comment_user.name</a></strong></span>
 		            </td>
 		            <td width="50" align="right" valign="middle">
 		                <a href="http://www.v2ex.com/t/46790#reply14" class="count_livid">14</a>
