--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -6,6 +6,7 @@ $else:
 <html>
 	<head> 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<link rel="icon" type="image/png" href="/static/img/favicon.ico">
 		<link rel="stylesheet" href="/static/css/shared.css" />
 		<link rel="stylesheet" href="/static/css/main.css" />
 		<script type="texxt/javascript" src="/static/js/jquery.js"></script>
