helper for template

--- a/tpl/list.html
+++ b/tpl/list.html
@@ -23,17 +23,22 @@ $var title: $node.description
 		    <input type="button" class="super normal button" value="创建新主题" onclick="location.href = '/create/$node.name';">
 	    </div>
 	    <div id="TopicsNode">
-$for post in posts:
-	$ user = post['user'][0]
+$for post_cur in posts:
+	$ user = post_cur['user']
+	$ post = post_cur['post']
+	$ comment_user = post_cur['comment_user']
 	<div class="cell from_8965">
 	    <table cellpadding="0" cellspacing="0" border="0" width="100%">
 	        <tbody>
 	        	<tr>
 		            <td width="48" valign="top" align="center"><a href="/member/holsety"><img src="http://tb.v2ex.com/avatar/f8ab/ea41/8965_normal.png?m=1336538012" class="avatar" border="0" align="default" auto=""></a></td>
 		            <td width="10"></td>
-		            <td width="auto" valign="middle"><span class="item_title"><a href="/post/$post['post'].id">$post['post'].title</a></span>
+		            <td width="auto" valign="middle"><span class="item_title"><a href="/post/$post.id">$post.title</a></span>
 		            <div class="sep5"></div>
-		            <span class="small fade"><strong><a href="/member/holsety">$user.name</a></strong> &nbsp;•&nbsp; 22 天前</span>
+		            <span class="small fade"><strong><a href="/member/holsety">$user.name</a></strong> &nbsp;•&nbsp; $helper.stamp2time(post.time)
+		            $if comment_user is not None:
+						 &nbsp;•&nbsp; 最后回复来自 <strong><a href="http://www.v2ex.com/member/hzlzh">$comment_user.name</a></strong>
+		            </span>
 		            </td>
 		            <td width="50" align="right" valign="middle">
 		            </td>
