--- a/tpl/index.html
+++ b/tpl/index.html
@@ -31,9 +31,10 @@ $for post_cur in posts:
 		            <td width="10"></td>
 		            <td width="auto" valign="middle"><span class="item_title"><a href="/post/$post.id">$post.title</a></span>
 		            <div class="sep5"></div>
-		            <span class="small fade"><a class="node" href="/node/$node.name">$node.display_name</a> &nbsp;•&nbsp; <strong><a href="http://www.v2ex.com/member/hzlzh">$user.name</a></strong>
+		            <span class="small fade"><a class="node" href="/node/$node.name">$node.display_name</a> &nbsp;•&nbsp; <strong><a href="http://www.v2ex.com/member/hzlzh">$user.name</a></strong>&nbsp;•&nbsp; $helper.stamp2time(post.time)
 					$if comment_user is not None:
-						&nbsp;•&nbsp; $post.time &nbsp;•&nbsp; 最后回复来自 <strong><a href="http://www.v2ex.com/member/hzlzh">$comment_user.name</a></strong></span>
+						 &nbsp;•&nbsp; 最后回复来自 <strong><a href="http://www.v2ex.com/member/hzlzh">$comment_user.name</a></strong>
+					</span>
 		            </td>
 		            <td width="50" align="right" valign="middle">
 		                <a href="http://www.v2ex.com/t/46790#reply14" class="count_livid">14</a>
