count views & comments

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -37,7 +37,7 @@ $for post_cur in posts:
 					</span>
 		            </td>
 		            <td width="50" align="right" valign="middle">
-		                <a href="http://www.v2ex.com/t/46790#reply14" class="count_livid">14</a>
+		                <a href="http://www.v2ex.com/t/46790#reply14" class="count_livid">$post.comments</a>
 		            </td>
 		        </tr>
 		    </tbody>
