--- a/tpl/index.html
+++ b/tpl/index.html
@@ -31,7 +31,7 @@ $for post_cur in posts:
 		            <td width="10"></td>
 		            <td width="auto" valign="middle"><span class="item_title"><a href="/post/$post.id">$post.title</a></span>
 		            <div class="sep5"></div>
-		            <span class="small fade"><a class="node" href="/node/$node.name">$node.display_name</a> &nbsp;•&nbsp; <strong><a href="http://www.v2ex.com/member/hzlzh">$user.name</a></strong>&nbsp;•&nbsp; $helper.stamp2time(post.time)
+		            <span class="small fade"><a class="node" href="/node/$node.name">$node.display_name</a> &nbsp;•&nbsp; <strong><a href="http://www.v2ex.com/member/hzlzh">$user.name</a></strong>&nbsp;•&nbsp; $helper.stamp2during(post.time)
 					$if comment_user is not None:
 						 &nbsp;•&nbsp; 最后回复来自 <strong><a href="http://www.v2ex.com/member/hzlzh">$comment_user.name</a></strong>
 					</span>
