complete login & signup template

--- a/tpl/create_post.html
+++ b/tpl/create_post.html
@@ -6,7 +6,9 @@ $var title: $title
     <div class="header">$:crumb</div>
     
     <div class="cell">
+    <form method="post">
         $:form.render()
+    </form>
     </div>
     <div class="inner">
         <h2>主题创建指南</h2>
@@ -23,5 +25,4 @@ $var title: $title
         我们希望 V2EX 能够成为中文世界中氛围最好的社区，而实现这个目标，需要我们所有人的共同努力：友善，公平，尊重知识和事实。
     </div>
 </div>
-
-            </div>
+</div>
