--- a/tpl/post_view.html
+++ b/tpl/post_view.html
@@ -67,7 +67,7 @@ $else:
     	</form>
     </div>
     <div class="inner">
-        <div class="fr"><a href="/">← V2EX</a></div>
+        <div class="fr"><a href="/">← Post_bar</a></div>
         &nbsp;
     </div>
 </div>
