--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -113,8 +113,12 @@ $else:
     </div>
 </div>
 $:content
-			</div>
-		</div>
+	</div>
+	<div class="c">
+	</div>
+	<div class="sep20">
+	</div>
+</div>
 		<div id="Bottom">
 			<div class="content">
 				<div class="inner">
