--- a/tpl/login.html
+++ b/tpl/login.html
@@ -1,6 +1,15 @@
-$def with (form, title)
+$def with (form, title, crumb)
 $var title : $title
-<h2>登录</h2>
-<form  action="" method="post">
-	$:form.render_css()
-</form>
+<div id="Main">
+<div class="sep20"></div>
+<div class="box">
+    <div class="header">
+    	$:crumb
+    </div>
+    <div class="inner">
+        <form method="post">
+        	$:form.render()
+        </form>
+    </div>
+</div>
+</div>
