--- a/tpl/signup.html
+++ b/tpl/signup.html
@@ -1,7 +1,15 @@
-$def with (form, title)
+$def with (form, title, crumb)
 $var title : $title
-<div id="signup">
-	<form action="" method="post">
-		$:form.render_css()
-	</form>
+<div id="Main">
+<div class="sep20"></div>
+<div class="box">
+    <div class="header">
+		$:crumb
+    </div>
+    <div class="inner">
+    	<form method="post">
+    		$:form.render()	
+    	</form>
+    </div>
+</div>
 </div>
