--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -33,7 +33,15 @@ $else:
 	                        </script>
 	                        <div id="Search"><form onsubmit="return dispatch()"><div style="width: 276px; height: 28px; background-image: url('/static/img/qbar.png'); background-repeat: no-repeat; display: inline-block;"><input type="text" maxlength="40" name="q" id="q" value=""></div></form></div>
 	                    </td>
-	                    <td width="500" align="right" style="padding-top: 2px;"><a href="./V2EX_files/V2EX.htm" class="top">首页</a>&nbsp;&nbsp;&nbsp;<a href="http://www.v2ex.com/member/Rabbit52" class="top">Rabbit52</a>&nbsp;&nbsp;&nbsp;<a href="https://workspace.v2ex.com/" target="_blank" class="top">工作空间</a>&nbsp;&nbsp;&nbsp;<a href="http://www.v2ex.com/notes" class="top">记事本</a>&nbsp;&nbsp;&nbsp;<a href="http://www.v2ex.com/events" class="top">活动</a>&nbsp;&nbsp;&nbsp;<a href="http://www.v2ex.com/place/222.210.206.64" class="top">附近</a>&nbsp;&nbsp;&nbsp;<a href="http://www.v2ex.com/settings" class="top">设置</a>&nbsp;&nbsp;&nbsp;<a href="/logout" class="top">登出</a></td>
+	                    <td width="500" align="right" style="padding-top: 2px;">
+	                    	<a href="./V2EX_files/V2EX.htm" class="top">首页</a>&nbsp;&nbsp;&nbsp;
+	                    	<a href="http://www.v2ex.com/member/Rabbit52" class="top">Rabbit52</a>&nbsp;&nbsp;&nbsp;
+	                    	<a href="https://workspace.v2ex.com/" target="_blank" class="top">工作空间</a>&nbsp;&nbsp;&nbsp;
+	                    	<a href="http://www.v2ex.com/notes" class="top">记事本</a>&nbsp;&nbsp;&nbsp;
+	                    	<a href="http://www.v2ex.com/events" class="top">活动</a>&nbsp;&nbsp;&nbsp;
+	                    	<a href="http://www.v2ex.com/place/222.210.206.64" class="top">附近</a>&nbsp;&nbsp;&nbsp;
+	                    	<a href="/settings" class="top">设置</a>&nbsp;&nbsp;&nbsp;
+	                    	<a href="/logout" class="top">登出</a></td>
 	                </tr>
 	            </tbody></table>
 	            </div>
