--- a/tpl/settings.html
+++ b/tpl/settings.html
@@ -1,9 +1,11 @@
-$def with (title)
+$def with (title, crumb)
 $var title : $title
 <div id="Main">
 <div class="sep20"></div>          
 <div class="box">
-    <div class="header"><a href="/">V2EX</a> <span class="chevron">&nbsp;›&nbsp;</span> 设置</div>
+    <div class="header">
+    	$:crumb
+    </div>
     
     <div class="inner">
         <form method="post" action="/settings">
