--- a/tpl/index.html
+++ b/tpl/index.html
@@ -47,7 +47,7 @@ $for post_cur in posts:
 </div>
 <div class="sep20"></div>
 <div class="box">
-    <div class="cell"><div class="fr"><a href="/planes">浏览全部节点</a></div><span class="fade"><strong>V2EX</strong> / 节点导航</span></div>
+    <div class="cell"><div class="fr"><a href="/planes">浏览全部节点</a></div><span class="fade"><strong>Post_bar</strong> / 节点导航</span></div>
 $for cat_cur in cats:
 	$ cat = cat_cur['cat']
 	$ nodes = cat_cur['node']
