--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -35,7 +35,7 @@ $else:
 	                    </td>
 	                    <td width="500" align="right" style="padding-top: 2px;">
 	                    	<a href="./V2EX_files/V2EX.htm" class="top">首页</a>&nbsp;&nbsp;&nbsp;
-	                    	<a href="http://www.v2ex.com/member/Rabbit52" class="top">Rabbit52</a>&nbsp;&nbsp;&nbsp;
+	                    	<a href="/profile/Rabbit52" class="top">Rabbit52</a>&nbsp;&nbsp;&nbsp;
 	                    	<a href="https://workspace.v2ex.com/" target="_blank" class="top">工作空间</a>&nbsp;&nbsp;&nbsp;
 	                    	<a href="http://www.v2ex.com/notes" class="top">记事本</a>&nbsp;&nbsp;&nbsp;
 	                    	<a href="http://www.v2ex.com/events" class="top">活动</a>&nbsp;&nbsp;&nbsp;
@@ -58,9 +58,9 @@ $if session.user_id:
 	    <table cellpadding="0" cellspacing="0" border="0" width="100%">
 	        <tbody>
 	        	<tr>
-	                <td width="48" valign="top"><a href="http://www.v2ex.com/member/Rabbit52"><img src="./V2EX_files/23312_large.png" class="avatar" border="0" align="default" width="48"></a></td>
+	                <td width="48" valign="top"><a href="/profile/$session.name"><img src="./V2EX_files/23312_large.png" class="avatar" border="0" align="default" width="48"></a></td>
 	                <td width="10" valign="top"></td>
-	                <td width="auto" align="left"><span class="bigger"><a href="http://www.v2ex.com/member/Rabbit52">$session.name</a></span>
+	                <td width="auto" align="left"><span class="bigger"><a href="/profile/$session.name">$session.name</a></span>
 	                    <div class="sep5"></div>
 	                    <span class="fade">Python是新欢，PHP是旧爱</span>
 	                </td>
