--- a/tpl/post_nf.html
+++ b/tpl/post_nf.html
@@ -1,5 +1,9 @@
-$def with (title)
+$def with (title, crumb)
 $var title: $title
-<div class="error_message">
-	主题未找到
-</div>
+<div id="Main">
+<div class="sep20"></div>
+<div class="box">
+<div class="header">$:crumb</div>
+<div class="cell"><span class="gray bigger">Topic Not Found</span></div>
+<div class="inner">← <a href="/">返回首页</a></div>
+</div></div>
