--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -62,7 +62,7 @@ $if session.user_id:
 	                <td width="10" valign="top"></td>
 	                <td width="auto" align="left"><span class="bigger"><a href="/profile/$session.name">$session.name</a></span>
 	                    <div class="sep5"></div>
-	                    <span class="fade">Python是新欢，PHP是旧爱</span>
+	                    <span class="fade">$session.signature</span>
 	                </td>
 	            </tr>
 	    	</tbody>
